ordered functions and fixed bug regarding loading of session, now performing terminal operations in advance to prevent invalid state exception related to file streams