@@ -7,8 +7,10 @@ import app.faculty.Session;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Stream;
 
 
@@ -51,9 +53,62 @@ public class SessionDB {
         var dirPath = resolveUptoCourseDir(f,c.getCode());
         return loadSessionViews(dirPath);
     }
+
     public static Stream<Session> getSessions(String courseCode) {
         var faculties = CourseDB.getFacultiesForCourse(courseCode);
-        return faculties.flatMap(faculty -> loadSessions(resolveUptoCourseDir(faculty, courseCode)));
+        return faculties.flatMap(
+                    faculty -> loadSessions(
+                            resolveUptoCourseDir(faculty, courseCode)
+                    ).stream()
+                )
+            .sorted();
+    }
+
+    public static List<Session> loadSessions(Path sessionsDir) {
+        try (Stream<Path> stream = Files.walk(sessionsDir)) {
+            System.out.print("reading");
+            System.out.println(sessionsDir);
+            return stream
+                    .filter(Files::isRegularFile)
+                    .map(SessionDB::readSessionFromFile)
+                    .filter(Optional::isPresent)
+                    .map(Optional::get).toList();
+        } catch (IOException e) {
+            System.err.println("Error walking the file tree: " + e.getMessage());
+            return Collections.emptyList();
+        }
+    }
+
+    private static Path resolveUptoCourseDir(Faculty f,String c) {
+        Path facultyPath = SessionsDir.resolve(f.getEmpCode());
+        Path coursePath = facultyPath.resolve(c);
+        if (!Files.exists(coursePath)) {
+            try {
+                Files.createDirectories(coursePath);
+            } catch (IOException ignore) {
+                return Loader.TRASHDIR;
+            }
+        }
+        return coursePath;
+    }
+
+    private static Optional<Session> readSessionFromFile(Path path) {
+        try (ObjectInputStream inputStream = new ObjectInputStream(new FileInputStream(path.toFile()))) {
+            Session s = new Session();
+            s.readExternal(inputStream);
+            sessionsCache.cache(s);
+            return Optional.of(s);
+        } catch (IOException | ClassNotFoundException e) {return Optional.empty();}
+    }
+
+    public static void loadSession(Session s) {
+        var sessionFile = resolveSessionFile(s);
+        try (ObjectInputStream inputStream = new ObjectInputStream(new FileInputStream(sessionFile))) {
+            s.readExternal(inputStream);
+            sessionsCache.cache(s);
+        } catch (IOException | ClassNotFoundException ignored) {
+            retarded.add(s);
+        }
     }
 
     private static File resolveSessionFile(Session s) {
@@ -69,36 +124,19 @@ public class SessionDB {
         }
         return sessionFilePath.toFile();
     }
-    private static Path resolveUptoCourseDir(Faculty f,String c) {
-        Path facultyPath = SessionsDir.resolve(f.getEmpCode());
-        Path coursePath = facultyPath.resolve(c);
-        if (!Files.exists(coursePath)) {
-            try {
-                Files.createDirectories(coursePath);
-            } catch (IOException ignore) {
-                return Loader.TRASHDIR;
-            }
-        }
-        return coursePath;
-    }
-    public static void loadSession(Session s) {
-        var sessionFile = resolveSessionFile(s);
-        try (ObjectInputStream inputStream = new ObjectInputStream(new FileInputStream(sessionFile))) {
-            s.readExternal(inputStream);
-            sessionsCache.cache(s);
-        } catch (IOException | ClassNotFoundException ignored) {retarded.add(s);}
-    }
+
     public static List<Session> loadSessionViews(Path sessionsDir) {
         try (Stream<Path> stream = Files.walk(sessionsDir)) {
             return stream.filter(Files::isRegularFile)
                          .map(SessionDB::loadSessionViewFromFile)
                          .flatMap(Optional::stream)
-                         .collect(Collectors.toList());
+                         .toList();
         } catch (IOException e) {
-            System.out.println(e.toString());
+            System.out.println(e.getMessage());
             return Collections.emptyList();
         }
     }
+
     private static Optional<Session> loadSessionViewFromFile(Path path) {
         Session s = new Session();
         try (ObjectInputStream inputStream = new ObjectInputStream(new FileInputStream(path.toFile()))) {
@@ -111,21 +149,6 @@ public class SessionDB {
         }
     }
 
-    public static Stream<Session> loadSessions(Path sessionsDir) {
-        try (Stream<Path> stream = Files.walk(sessionsDir)) {
-            return stream.filter(Files::isRegularFile)
-                         .map(SessionDB::readSessionFromFile)
-                         .flatMap(Optional::stream);
-        } catch (IOException e) {return Stream.empty();}
-    }
-    private static Optional<Session> readSessionFromFile(Path path) {
-        try (ObjectInputStream inputStream = new ObjectInputStream(new FileInputStream(path.toFile()))) {
-            Session s = new Session();
-            s.readExternal(inputStream);
-            sessionsCache.cache(s);
-            return Optional.of(s);
-        } catch (IOException | ClassNotFoundException e) {return Optional.empty();}
-    }
     private static void writeSession(Session s) {
         var filePath = resolveSessionFile(s);
         try (ObjectOutputStream outputStream = new ObjectOutputStream(new FileOutputStream(filePath))) {
